# device-detection-dotnet

./: .gitignore  .gitmodules  .utm-lint.json  51D.md  51Degrees.publickey  CONTRIBUTING.md  Directory.Build.props  FiftyOne.DeviceDetection.Core.slnf  FiftyOne.DeviceDetection.sln  LICENSE  README.md  build-and-test.yml  publish-packages.yml
FiftyOne.DeviceDetection/: .gitignore  CMakeLists.txt  DeviceDetectionCloudPipelineBuilder.cs  DeviceDetectionHashEngineSwig_csharp.cpp  DeviceDetectionOnPremisePipelineBuilder.cs  DeviceDetectionPatternEngineSwig_csharp.cpp  DeviceDetectionPipelineBuilder.cs  Enums.cs  FiftyOne.DeviceDetection.csproj  Messages.Designer.cs  Messages.resx  PreBuild.sh  hash_dotnet.i
FiftyOne.DeviceDetection.Hash.Engine.OnPremise/: .gitignore  AssemblyInfo.cs  CMakeLists.txt  DeviceDetectionFastValues.cpp  DeviceDetectionHashEngineSwig_csharp.cpp  Enums.cs  FiftyOne.DeviceDetection.Hash.Engine.OnPremise.csproj  FiftyOne.DeviceDetection.Hash.Engine.OnPremise.targets  Messages.Designer.cs  Messages.resx  PreBuild.ps1  hash_csharp.i
FiftyOne.DeviceDetection.Hash.Engine.OnPremise/Data/: CollectionExtensions.cs  ComponentMetaData.cs  ComponentMetaDataHash.cs  DeviceDataHash.cs  FiftyOneAspectPropertyMetaDataHash.cs  IDeviceDataHash.cs  ProfileMetaData.cs  PropertyMetaDataHash.cs  ValueMetaData.cs
FiftyOne.DeviceDetection.Hash.Engine.OnPremise/FlowElements/: DeviceDetectionHashEngine.cs  DeviceDetectionHashEngineBuilder.cs  DeviceDetectionHashEngineBuilderBase.cs
FiftyOne.DeviceDetection.Hash.Engine.OnPremise/Interop/Swig/: BoolValueSwig.cs  CollectionConfigSwig.cs  ComponentMetaDataCollectionSwig.cs  ComponentMetaDataSwig.cs  ConfigBaseSwig.cs  ConfigDeviceDetectionSwig.cs  ConfigHashSwig.cs  Date.cs  DeviceDetectionHashEngineModule.cs  DeviceDetectionHashEngineModulePINVOKE.cs  DoubleValueSwig.cs  EngineBaseSwig.cs  EngineDeviceDetectionSwig.cs  EngineHashSwig.cs  EvidenceBaseSwig.cs  EvidenceDeviceDetectionSwig.cs  IntegerValueSwig.cs  MapStringStringSwig.cs  MetaDataSwig.cs  ProfileMetaDataCollectionSwig.cs  ProfileMetaDataSwig.cs  PropertyMetaDataCollectionSwig.cs  PropertyMetaDataSwig.cs  RequiredPropertiesConfigSwig.cs  ResultsBaseSwig.cs  ResultsDeviceDetectionSwig.cs  ResultsHashSerializer.cs  ResultsHashSwig.cs  SWIGTYPE_p_byte.cs  StringValueSwig.cs  Transform.cs  UTF8StringSwig.cs  ValueMetaDataCollectionSwig.cs  ValueMetaDataKeySwig.cs  ValueMetaDataSwig.cs  VectorStringSwig.cs  VectorStringValuesSwig.cs
FiftyOne.DeviceDetection.Hash.Engine.OnPremise/Wrappers/: BoolValueSwigWrapper.cs  ComponentCollectionSwigWrapper.cs  ConfigSwigWrapper.cs  DateSwigWrapper.cs  DoubleValueSwigWrapper.cs  EngineSwigWrapper.cs  IComponentCollectionSwigWrapper.cs  IConfigSwigWrapper.cs  IDateSwigWrapper.cs  IEngineSwigWrapper.cs  IMetaDataSwigWrapper.cs  IProfileCollectionSwigWrapper.cs  IPropertyCollectionSwigWrapper.cs  IRequiredPropertiesConfigSwigWrapper.cs  IResultsSwigWrapper.cs  ISwigFactory.cs  IValueCollectionSwigWrapper.cs  IValueSwigWrapper.cs  IntegerValueSwigWrapper.cs  MetaDataSwigWrapper.cs  ProfileCollectionSwigWrapper.cs  PropertyCollectionSwigWrapper.cs  RequiredPropertiesConfigSwigWrapper.cs  ResultsSwigWrapper.cs  StringValueSwigWrapper.cs  SwigFactory.cs  ValueCollectionSwigWrapper.cs  VectorValueSwigWrapper.cs
FiftyOne.DeviceDetection/Apple/: AppleDecisionTree.cs  AppleDecisionTreeNode.cs  AppleDecisionTreeNodeBase.cs  AppleDecisionTreeNodeRange.cs  AppleProfileData.cs  AppleProfileEngine.cs  AppleProfileEngineBuilder.cs  ApplePropertyMetaData.cs  Constants.cs  IAppleDecisionTreeNode.cs  IAppleProfileData.cs
FiftyOne.DeviceDetection/Examples/: ExampleBase.cs  FiftyOne.DeviceDetection.Examples.csproj
FiftyOne.DeviceDetection/Examples/AspNetCore 2.1/: DeviceDetectionWebDemo NetCore 2.1.csproj  Program.cs  Startup.cs
FiftyOne.DeviceDetection/Examples/AspNetCore 3.1/: DeviceDetectionWebDemo NetCore 3.1.csproj  Program.cs  Startup.cs
FiftyOne.DeviceDetection/Examples/AspNetCore 3.1 - Cloud/: Cloud DeviceDetectionWebDemo NetCore 3.1.csproj  Startup.cs  appsettings.json
FiftyOne.DeviceDetection/Examples/AspNetCore2.1/: DeviceDetectionWebDemo NetCore 2.1.csproj  Startup.cs  (+2 more)
FiftyOne.DeviceDetection/FiftyOne.DeviceDetection/: DeviceDetectionCloudPipelineBuilder.cs  DeviceDetectionOnPremisePipelineBuilder.cs  DeviceDetectionPipelineBuilder.cs  Enums.cs  FiftyOne.DeviceDetection.csproj  Messages.Designer.cs  Messages.resx
FiftyOne.DeviceDetection/FiftyOne.DeviceDetection.Cloud/: FiftyOne.DeviceDetection.Cloud.csproj  Messages.Designer.cs  Messages.resx
FiftyOne.DeviceDetection/FiftyOne.DeviceDetection.Data/: Constants.cs  DeviceDataBase.cs  FiftyOne.DeviceDetection.Shared.csproj  GlobalSuppressions.cs  Messages.Designer.cs
FiftyOne.DeviceDetection/FiftyOne.DeviceDetection.Hash.Engine.OnPremise/: AssemblyInfo.cs  Enums.cs  FiftyOne.DeviceDetection.Hash.Engine.OnPremise.csproj  FiftyOne.DeviceDetection.Hash.Engine.OnPremise.targets  FiftyOne.DeviceDetection.Hash.Engine.OnPremise.xml  Messages.Designer.cs  Messages.resx  PreBuild.ps1
FiftyOne.DeviceDetection/FiftyOne.DeviceDetection.Hash.Engine.OnPremise.Native/: FiftyOne.DeviceDetection.Hash.Engine.OnPremise.Native.vcxproj  FiftyOne.DeviceDetection.Hash.Engine.OnPremise.Native.vcxproj.filters  PreBuild.bat  PreBuild.sh  hash_csharp.i  hash_dotnet.i
FiftyOne.DeviceDetection/FiftyOne.DeviceDetection.Pattern.Engine.OnPremise/: AssemblyInfo.cs  Enums.cs  FiftyOne.DeviceDetection.Pattern.Engine.OnPremise.csproj  FiftyOne.DeviceDetection.Pattern.Engine.OnPremise.targets  FiftyOne.DeviceDetection.Pattern.Engine.OnPremise.xml
FiftyOne.DeviceDetection/FiftyOne.DeviceDetection.Pattern.Engine.OnPremise.Native/: DeviceDetectionPatternEngineSwig_csharp.cpp  FiftyOne.DeviceDetection.Pattern.Engine.OnPremise.Native.vcxproj  FiftyOne.DeviceDetection.Pattern.Engine.OnPremise.Native.vcxproj.filters  PreBuild.bat  PreBuild.sh  pattern_csharp.i
FiftyOne.DeviceDetection/Uach/: Constants.cs  UachJsConversionData.cs  UachJsConversionElement.cs  UachJsConversionElementBuilder.cs  UachJson.cs
(+2201 files in other folders)
